# PoissonCodes

./: CMakeLists.txt
include/: ConstantData.hpp  Grid.hpp  Solver.hpp  utils.hpp
plots/: gaussSiedelSolver.py  matsolution.py  modifiedsolve.py  plotPoisson.py  plottool.py  spmatrix.py  utils.py
plots/PythonGaussSiedel_Solution/: udataN=161  udataN=81
plots/pareto/: qvalpareto.txt  solnsN=41b=0.00h=0.10.txt  solnsN=41b=0.00h=0.20.txt  solnsN=41b=0.00h=0.30.txt  solnsN=41b=0.00h=0.40.txt  solnsN=41b=0.00h=0.50.txt  solnsN=41b=0.00h=0.60.txt  solnsN=41b=0.00h=0.70.txt  solnsN=41b=0.00h=0.80.txt  solnsN=41b=0.00h=0.90.txt  solnsN=41b=0.00h=1.00.txt  solnsN=41b=0.10h=0.10.txt  solnsN=41b=0.10h=0.20.txt  solnsN=41b=0.10h=0.30.txt  solnsN=41b=0.10h=0.40.txt  solnsN=41b=0.10h=0.50.txt  solnsN=41b=0.10h=0.60.txt  solnsN=41b=0.10h=0.70.txt  solnsN=41b=0.10h=0.80.txt  solnsN=41b=0.10h=0.90.txt  solnsN=41b=0.10h=1.00.txt  solnsN=41b=0.20h=0.10.txt  solnsN=41b=0.20h=0.20.txt  solnsN=41b=0.20h=0.30.txt  solnsN=41b=0.20h=0.40.txt  solnsN=41b=0.20h=0.50.txt  solnsN=41b=0.20h=0.60.txt  solnsN=41b=0.20h=0.70.txt  solnsN=41b=0.20h=0.80.txt  solnsN=41b=0.20h=0.90.txt  solnsN=41b=0.20h=1.00.txt  solnsN=41b=0.30h=0.10.txt  solnsN=41b=0.30h=0.20.txt  solnsN=41b=0.30h=0.30.txt  solnsN=41b=0.30h=0.40.txt  solnsN=41b=0.30h=0.50.txt  solnsN=41b=0.30h=0.60.txt  solnsN=41b=0.30h=0.70.txt  solnsN=41b=0.30h=0.80.txt  solnsN=41b=0.30h=0.90.txt  (+71 more)
plots/plotdir_b=0.0/: flowrate.txt  flowrate1.txt  l2Error.txt  linfError.txt  solns0.txt  (+6 more)
src/: Grid.cpp  MainFile.cpp  Solver.cpp  utils.cpp
(+385 files in other folders)
