cmake_minimum_required(VERSION 3.9.1)
project(HW1)
set(CMAKE_CXX_STANDARD 14)
include_directories(include)
include_directories(/home/gaurav/CS6220/alglib-cpp/src)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_C_FLAGS_DEBUG "-g -DDEBUG")
set(CMAKE_CXX_FLAGS_DEBUG "-g -DDEBUG")
file(GLOB SOURCES "src/*.cpp")
file(GLOB ALGSOURCES "/home/gaurav/CS6220/alglib-cpp/src/*.cpp")
add_executable(solver ${SOURCES} ${ALGSOURCES})